# Anisotropic_Kuwahara_Filtering_with_OpenCV

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpu_version_src/: CMakeLists.txt  MultithreadedVideoCapture.cpp  MultithreadedVideoCapture.hh  main.cpp
cpu_version_src/multi_scale_anisotropic_kuwahara/: CMakeLists.txt  ImagePyramid.cpp  ImagePyramid.hh  anisotropic_kuwahara.cpp  anisotropic_kuwahara.hh  anysotropic_kuwahara.cpp  anysotropic_kuwahara.hh  ellipses.cpp  ellipses.hh  local_structure_estimation.cpp  local_structure_estimation.hh  utils.cpp  utils.hh
experimentations/: Color_quantization.ipynb
src/: CMakeLists.txt  MultithreadedVideoCapture.cpp  MultithreadedVideoCapture.hh  anisotropic_kuwahara_shader.shd  fragment_shader.shd  main.cpp  main_opengl.cpp  simple_display.shd  vertex_shader.shd
src/anisotropic_kuwahara/: CMakeLists.txt  ImagePyramid.cpp  anisotropic_kuwahara.cpp  anisotropic_kuwahara.hh  ellipses.cpp  ellipses.hh  local_structure_estimation.cpp  local_structure_estimation.hh  utils.cpp  utils.hh
src/anisotropic_kuwahara_with_opengl/: CMakeLists.txt  program.cpp  program.hh  screen.cpp  screen.hh
src/multi_scale_anisotropic_kuwahara/: CMakeLists.txt  anisotropic_kuwahara.cpp  anisotropic_kuwahara.hh  ellipses.cpp  ellipses.hh  local_structure_estimation.hh  utils.cpp
